--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serverstart": "SET DEBUG=express-locallibrary:* & npm run devstart"
   },
   "engines": {
-    "node": ">=18.16.0"
+    "node": "18.16.0"
   },
   "dependencies": {
     "compression": "^1.8.0",
